# Photo-Enhancer-Pro

./: .gitignore  CHANGELOG.md  DEVELOPMENT_REPORT.md  LICENSE  PhotoEnhancerPro.spec  README.md  cli.py  config.json  config.py  enhancer.py  gui.py  main.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  controller.py
app/workers/: __init__.py  pipeline_worker.py
core/: __init__.py  container.py  di.py
installer/: PhotoEnhancerPro.iss
models/: .gitkeep
noise/: __init__.py  reducer.py
processing/: __init__.py  context.py  defaults.py  stage_pipeline.py
processing/stages/: __init__.py  base.py  color.py  detail.py  tone.py
reports/: .gitkeep
scripts/: build_windows.ps1
segmentation/: __init__.py  segmenter.py
styles/: __init__.py  base.py  cinematic.py  dslr.py  instagram.py  iphone.py  landscape.py  nature.py  portrait.py
tests/: __init__.py  test_config.py  test_enhancer.py  test_files.py  test_gui.py  test_integration.py  test_performance.py  test_quality.py  test_stages.py  test_styles.py
tools/: __init__.py  architecture_report.py  benchmark.py  common.py  dependency_graph.py  project_report.py  quality_report.py
ui/: __init__.py  app.py  main_window.py  splash.py
ui/styles/: dark.qss
ui/widgets/: histogram.py  loading_spinner.py  preview_canvas.py
upscale/: __init__.py  upscaler.py
utils/: __init__.py  exif.py  files.py  hardware.py  image_io.py  qt_image.py  quality.py
