[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-enhancer-pro"
version = "1.0.0"
description = "Production-ready offline photo enhancement desktop app with iPhone Pro style"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Photo Enhancer Pro Team" }]
keywords = ["photo", "enhancement", "computer-vision", "iphone", "pyside6", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.2.0",
    "PySide6>=6.6.0",
    "piexif>=1.1.3",
    "pillow-heif>=0.15.0",
    "imagehash>=4.3.1",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2.0",
    "onnxruntime-gpu>=1.17.0",
]
ai = [
    "torch>=2.2.0",
    "onnxruntime>=1.17.0",
    "ultralytics>=8.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]
all = ["photo-enhancer-pro[gpu,ai,dev]"]

[project.scripts]
photo-enhancer-pro = "main:main"
pep-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/kookoosya/Photo-Enhancer-Pro"
Repository = "https://github.com/kookoosya/Photo-Enhancer-Pro"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "styles*", "segmentation*", "upscale*", "noise*", "processing*", "core*", "app*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: performance benchmark tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
